test/zinc_source/compile_errors/tuples/02_index_nonliteral.zn
// expected-error: tuple index must be an integer literal

fn main() {
    pair = (1, 2)
    idx = 0
    bad = pair[idx]
}
